--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body, html {
+body {
   font-size: 16px;
   color: black;
   background-color: whitesmoke;
@@ -17,8 +17,6 @@ body, html {
   margin-left: 30px;
   margin-right: 30px;
   padding: 30px;
-  height: 100%;
-  width: 100%;
 }
 /** HEADER **/
 #header-nav {
